# lm-evaluation-harness

./: .pre-commit-config.yaml  Dockerfile.lmes-job  pyproject.toml  requirements.txt  s390x-parquet.patch
.tekton/: ta-lmes-job-217-pull-request.yaml  ta-lmes-job-217-push.yaml  ta-lmes-job-v2-18-push.yaml  ta-lmes-job-v2-20-push.yaml
lm_eval/tasks/japanese_leaderboard/: requirements.txt
